--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -3,7 +3,7 @@
     <head>
         <title>Getting to know CSS</title>
         <link rel="icon" href="favicon.png">
-        <link rel="stylesheet" type="text/css" herf="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <div class="warp">
